# realtime-taxi-app

./: .gitignore  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
compose/local/django/: Dockerfile  start
compose/local/django/celery/beat/: start
compose/local/django/celery/flower/: start
compose/local/django/celery/worker/: start
taxi/: asgi.py  celery.py  middleware.py  routing.py  settings.py  urls.py
trips/: admin.py  consumers.py  models.py  serializers.py  urls.py  views.py
trips/migrations/: 0001_initial.py  0002_trip.py  0003_trip_driver_rider.py
trips/tests/: test_http.py  test_websocket.py
